# ghostty

./: .gitattributes  .gitignore  :w  AGENTS.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  HACKING.md  build.zig  build.zig.zon  build.zig.zon.json  build.zig.zon.nix  build.zig.zon.txt  flake.nix  typos.toml  valgrind.supp
.github/: VOUCHED.td
.github/workflows/: milestone.yml  nix.yml  release-pr.yml  release-tag.yml  release-tip.yml  test.yml  update-colorschemes.yml
example/: package-lock.json
example/c-vt-build-info/src/: main.c
example/c-vt-cmake-static/src/: main.c
example/c-vt-cmake/src/: main.c
example/c-vt-effects/src/: main.c
example/c-vt-formatter/src/: main.c
example/c-vt-kitty-graphics/src/: main.c
example/c-vt-mouse-encode/: build.zig
example/c-vt-mouse-encode/src/: main.c
example/c-vt-paste/src/: main.c
example/c-vt-render/: README.md
example/c-vt-render/src/: main.c
example/swift-vt-xcframework/: Package.swift
example/swift-vt-xcframework/Sources/: main.swift
example/wasm-vt/: index.html
flatpak/: zig-packages.json
include/: ghostty.h
include/ghostty/: vt.h
include/ghostty/vt/: allocator.h  build_info.h  color.h  device.h  device_status.h  focus.h  formatter.h  grid_ref.h  key.h  kitty_graphics.h  modes.h  mouse.h  osc.h  paste.h  point.h  render.h  result.h  screen.h  selection.h  sgr.h  size_report.h  style.h  sys.h  terminal.h  types.h  wasm.h
include/ghostty/vt/key/: encoder.h  event.h
include/ghostty/vt/mouse/: encoder.h  event.h
macos/: AGENTS.md  Ghostty-Info.plist  Ghostty.sdef
macos/Ghostty.xcodeproj/: project.pbxproj
macos/GhosttyUITests/: GhosttyMouseStateTests.swift  GhosttyWindowPositionUITests.swift
macos/Sources/App/macOS/: AppDelegate.swift
macos/Sources/Features/About/: AboutView.swift
macos/Sources/Features/App Intents/: CloseTerminalIntent.swift  CommandPaletteIntent.swift  GetTerminalDetailsIntent.swift  InputIntent.swift  KeybindIntent.swift  NewTerminalIntent.swift  QuickTerminalIntent.swift
macos/Sources/Features/AppleScript/: AppDelegate+AppleScript.swift  AppleScriptTerminal.swift  ScriptCloseCommand.swift  ScriptFocusCommand.swift  ScriptInputTextCommand.swift  ScriptKeyEventCommand.swift  ScriptMouseButtonCommand.swift  (+7 more)
macos/Sources/Ghostty/: Ghostty.App.swift  Ghostty.Config.swift  Ghostty.Input.swift  SurfaceView_AppKit.swift
macos/Sources/Helpers/: LastWindowPosition.swift  TabTitleEditor.swift
macos/Tests/Ghostty/: ConfigTests.swift  NormalizedMenuShortcutKeyTests.swift
macos/Tests/Terminal/: IntrinsicSizeTimingTests.swift
nix/: devShell.nix  libghostty-vt.nix  package.nix
nix/pkgs/: blessed.nix  ucs-detect.nix
pkg/breakpad/: build.zig
pkg/cimgui/: build.zig
pkg/fontconfig/: build.zig
pkg/freetype/: build.zig
pkg/glslang/: build.zig
pkg/gtk4-layer-shell/src/: main.zig
pkg/harfbuzz/: build.zig
pkg/highway/: build.zig
pkg/libintl/: build.zig
pkg/libpng/: build.zig
pkg/libxml2/: build.zig
pkg/macos/: build.zig
pkg/oniguruma/: build.zig  regex.zig
pkg/sentry/: build.zig
pkg/simdutf/: build.zig
pkg/spirv-cross/: build.zig
pkg/utf8proc/: build.zig
pkg/utfcpp/: build.zig
pkg/wuffs/: build.zig
pkg/zlib/: build.zig
po/: bg_BG.UTF-8.po  ca_ES.UTF-8.po  com.mitchellh.ghostty.pot  de_DE.UTF-8.po  es_AR.UTF-8.po  es_AR.po  es_BO.UTF-8.po  fr_FR.UTF-8.po  ga_IE.UTF-8.po  he_IL.UTF-8.po  id.po  id_ID.UTF-8.po  ja_JP.UTF-8.po  ko_KR.UTF-8.po  mk_MK.UTF-8.po  nb_NO.UTF-8.po  nl_NL.UTF-8.po  pl_PL.UTF-8.po  pt_BR.UTF-8.po  ru_RU.UTF-8.po  tr_TR.UTF-8.po  uk_UA.UTF-8.po  vi.po  zh_CN.UTF-8.po
snap/local/: launcher
src/: App.zig  Surface.zig  build_config.zig  config.zig  helpgen.zig  lib_vt.zig  main_build_data.zig  main_c.zig  pty.c  pty.zig  surface_mouse.zig
src/apprt/: action.zig  embedded.zig  gtk-ng.zig  structs.zig  surface.zig
src/apprt/gtk/: App.zig  ClipboardConfirmationWindow.zig  CommandPalette.zig  GlobalShortcuts.zig  ProgressBar.zig  Surface.zig  Window.zig  gresource.zig  menu.zig  portal.zig  style.css  winproto.zig
src/apprt/gtk-ng/: App.zig  Surface.zig  class.zig  ext.zig  key.zig  weak_ref.zig  winproto.zig
src/cli/: Pager.zig  edit_config.zig  explain_config.zig  new_window.zig
src/config/: CApi.zig  Config.zig  ConfigOverrides.zig  c_get.zig  formatter_file.zig  key.zig  path.zig
src/font/: CodepointResolver.zig  Collection.zig  Metrics.zig  SharedGrid.zig  SharedGridSet.zig  face.zig  main.zig  nerd_font_attributes.zig  nerd_font_codegen.py
src/font/face/: coretext.zig  freetype.zig
src/font/shaper/: coretext.zig  harfbuzz.zig
src/font/sprite/: Face.zig
src/input/: Binding.zig  key_encode.zig  mouse.zig  mouse_encode.zig
src/lib/: enum.zig  main.zig  struct.zig
src/os/: homedir.zig  i18n.zig  i18n_locales.zig
src/pty/: freebsd.c  linux.c  macos.c
src/renderer/: OpenGL.zig  Thread.zig  size.zig
src/shell-integration/bash/: ghostty.bash
src/shell-integration/zsh/: ghostty-integration
src/terminal/: PageList.zig  Screen.zig  ScreenSet.zig  Terminal.zig  ansi.zig  apc.zig  build_options.zig  device_attributes.zig  device_status.zig  focus.zig  formatter.zig  lib.zig  main.zig  modes.zig  mouse.zig  mouse_shape.zig  osc.zig  page.zig  point.zig  render.zig  size_report.zig  stream.zig  stream_readonly.zig  stream_terminal.zig
src/terminal/c/: AGENTS.md  allocator.zig  build_info.zig  cell.zig  focus.zig  formatter.zig  grid_ref.zig  key_encode.zig  key_event.zig  kitty_graphics.zig  main.zig  modes.zig  mouse_encode.zig  mouse_event.zig  osc.zig  paste.zig  render.zig  result.zig  row.zig  selection.zig  sgr.zig  size_report.zig  style.zig  sys.zig  terminal.zig  types.zig
src/terminal/kitty/: graphics_command.zig  graphics_exec.zig  graphics_image.zig  graphics_storage.zig
src/terminal/search/: screen.zig
src/terminal/tmux/: control.zig
src/termio/: Exec.zig  Termio.zig  Thread.zig  backend.zig  stream_handler.zig
test/fuzz-libghostty/src/: fuzz_stream.zig
test/windows/: README.md
windows/Ghostty.Tests/: Ghostty.Tests.csproj  LibghosttyInitTests.cs  test_dll_init.c
(+63 files in other folders)
